layout issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 @layer utilities {
   /* Custom utilities */
   .backgroud {
-    background: url('../images/weather_bg.png');
+    background: url('../images/weather_bg.png') no-repeat center center;
+    background-size: cover;
   }
   .panel{
     background-color: #0d9de7c9;
@@ -24,4 +25,6 @@
     opacity: 1;
     transition: opacity 2s ease;
   }
+
+
 }
